--- a/recipes/configs/llama3_2/1B_lora_single_device_qaic.yaml
+++ b/recipes/configs/llama3_2/1B_lora_single_device_qaic.yaml
@@ -21,20 +21,20 @@ output_dir: /tmp/torchtune/llama3_2_1B/lora_single_device # /tmp may be deleted 
 model:
   _component_: torchtune.models.llama3_2.lora_llama3_2_1b
   lora_attn_modules: ['q_proj', 'v_proj', 'output_proj']
-  apply_lora_to_mlp: True
-  lora_rank: 64  # higher increases accuracy and memory
-  lora_alpha: 128  # usually alpha=2*rank
+  apply_lora_to_mlp: False
+  lora_rank: 8  # higher increases accuracy and memory
+  lora_alpha: 16  # usually alpha=2*rank
   lora_dropout: 0.0
 
 # Tokenizer
 tokenizer:
   _component_: torchtune.models.llama3.llama3_tokenizer
-  path: /tmp/Llama-3.2-1B-Instruct/original/tokenizer.model
+  path: /tmp/Meta-Llama-3.2-1B/original/tokenizer.model
   max_seq_len: null
 
 checkpointer:
   _component_: torchtune.training.FullModelHFCheckpointer
-  checkpoint_dir: /tmp/Llama-3.2-1B-Instruct/
+  checkpoint_dir: /tmp/Meta-Llama-3.2-1B
   checkpoint_files: [
      model.safetensors
   ]
@@ -46,11 +46,11 @@ save_adapter_weights_only: False
 
 # Dataset and Sampler
 dataset:
-  _component_: torchtune.datasets.alpaca_cleaned_dataset
+  _component_: torchtune.datasets.samsum_dataset
   packed: False  # True increases speed
 seed: null
 shuffle: True
-batch_size: 4
+batch_size: 1
 
 # Optimizer and Scheduler
 optimizer:
@@ -60,15 +60,15 @@ optimizer:
   lr: 3e-4
 lr_scheduler:
   _component_: torchtune.training.lr_schedulers.get_cosine_schedule_with_warmup
-  num_warmup_steps: 100
+  num_warmup_steps: 2
 
 loss:
-  _component_: torchtune.modules.loss.CEWithChunkedOutputLoss
+  _component_: torchtune.modules.loss.LinearCrossEntropyLoss
 
 # Training
 epochs: 1
 max_steps_per_epoch: null
-gradient_accumulation_steps: 8  # Use to increase effective batch size
+gradient_accumulation_steps: 4  # Use to increase effective batch size
 clip_grad_norm: null
 compile: False  # torch.compile the model + loss, True increases speed + decreases memory
 
@@ -77,12 +77,12 @@ metric_logger:
   _component_: torchtune.training.metric_logging.DiskLogger
   log_dir: ${output_dir}/logs
 log_every_n_steps: 1
-log_peak_memory_stats: True
+log_peak_memory_stats: False
 log_level: INFO
 
 # Environment
-device: cuda
-dtype: bf16
+device: qaic
+dtype: fp16
 
 # Activations Memory
 enable_activation_checkpointing: False  # True reduces memory
@@ -98,8 +98,8 @@ profiler:
   output_dir: ${output_dir}/profiling_outputs
 
   #`torch.profiler.ProfilerActivity` types to trace
-  cpu: True
-  cuda: True
+  cpu: False
+  cuda: False
 
   #trace options passed to `torch.profiler.profile`
   profile_memory: False
